# zos_semestralka_fat

./: .gitignore  CMakeLists.txt  README.md  build.sh  defragmenter.sh  dokumentace.aux  dokumentace.out  dokumentace.tex  dokumentace.toc  fat-reader.c  fat-writer.c  fat_maker.sh  fragmented_example.fat
files/: a.txt  b.txt  c.txt  d.txt  e.txt  f.txt
src/: Defragmenter.cpp  Defragmenter.hpp  Fat.cpp  Fat.hpp  Playground.cpp  ThreadPool.hpp  ThreadSafeQueue.hpp  fat.hpp  main.cpp
